# cookiecutter-fastapi

./: .gitignore  =2.0.0  CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json  justfile  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: pre-commit-auto-update.yml  test.yml
docs/: conf.py  deployment.md  index.md  reference.md  requirements.txt  userguide.md
hooks/: post_gen_project.py
my_fastapi_project/: .env.template  LICENSE  README.md  manage.py  pyproject.toml
my_fastapi_project/app/: health.py  initial_data.py  lifetime.py  main.py  utils.py  worker.py
my_fastapi_project/app/core/: auth.py  config.py  logger.py
my_fastapi_project/app/db/: config.py  models.py
my_fastapi_project/app/services/email/: __init__.py  ses.py
my_fastapi_project/app/users/: manager.py  routes.py  tasks.py
project/: .env.template  README.md  manage.py  pyproject.toml
project/app/: initial_data.py  main.py  procrastinate.py
project/app/core/: auth.py  config.py  mail.py  security.py
project/app/db/: config.py  fields.py  models.py
project/app/templates/: base.html  index.html
project/app/users/: api.py  deps.py  manager.py  models.py  schemas.py  tasks.py  utils.py
project/app/utils/: __init__.py  media.py  shortcuts.py
project/app/views/: router.py
test_project/: .env.template  .gitignore  LICENSE  README.md  gunicorn.conf.py  manage.py  pyproject.toml
test_project/test_project/: __main__.py  health.py  initial_data.py  lifetime.py  main.py  worker.py
test_project/test_project/core/: auth.py  config.py  pagination.py
test_project/test_project/db/: config.py
test_project/test_project/emails/: base.html  welcome.html
test_project/test_project/services/email/: __init__.py  ses.py
test_project/test_project/users/: manager.py  models.py  routes.py  schemas.py  tasks.py
test_project/test_project/users/tests/: factories.py
tests/: test_project_generation.py
{{cookiecutter.project_slug}}/: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  justfile  manage.py  pyproject.toml  supervisord.conf
{{cookiecutter.project_slug}}/app/: __main__.py  health.py  initial_data.py  lifetime.py  main.py  utils.py  worker.py
{{cookiecutter.project_slug}}/app/core/: auth.py  config.py  pagination.py
{{cookiecutter.project_slug}}/app/db/: config.py
{{cookiecutter.project_slug}}/app/emails/: base.html  welcome.html
{{cookiecutter.project_slug}}/app/frontend/: app.py  utils.py
{{cookiecutter.project_slug}}/app/frontend/routers/: home.py
{{cookiecutter.project_slug}}/app/services/email/: __init__.py  errors.py  smtp.py  {% if cookiecutter.mail_service == 'Other SMTP' -%} smtp.py {%- endif %}
{{cookiecutter.project_slug}}/app/templates/: base.html  index.html
{{cookiecutter.project_slug}}/app/users/: manager.py  models.py  routes.py  utils.py
{{cookiecutter.project_slug}}/migrations/models/: 0_20220504171310_init.sql
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py  health.py  initial_data.py  lifetime.py  worker.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/core/: auth.py  config.py  pagination.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/db/: config.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/frontend/: app.py  utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/frontend/routers/: home.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/services/email/: __init__.py  null.py  ses.py  smtp.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/: manager.py  models.py  routes.py  tasks.py
