[tool.poetry]
name = "cookiecutter-fastapi"
version = "0.1.4"
description = "Cookiecutter for fastapi projects"
readme = "README.md"
authors = ["Tobi-De <tobidegnon@proton.me>"]
license = "MIT"
repository = "https://github.com/Tobi-De/cookiecutter-fastapi"
homepage = "https://cookiecutter-fastapi.readthedocs.io/en/latest/"
documentation = "https://cookiecutter-fastapi.readthedocs.io/en/latest/"
keywords = ["fastapi", "python", "cookiecutter", "project template", "tortoise-orm", "beanie", "SQLModel"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
]
packages = [
    { include = "tests" },
]

[tool.poetry.dependencies]
python = "^3.9"
cookiecutter = "^2.1.1"
pytest-cookies = ">=0.6.1,<0.8.0"
pytest = ">=7.2,<9.0"
furo = ">=2022.12.7,<2024.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=5.3,<8.0"
furo = ">=2022.12.7,<2024.0.0"
myst-parser = ">=0.18.1,<2.1.0"
sphinx-click = ">=4.4,<6.0"

[tool.pytest]
norecursedirs = ["app*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
