[project]
name = "cookiecutter-fastapi"
version = "0.1.4"
description = "Cookiecutter for fastapi projects"
readme = "README.md"
authors = [
    { name = "Tobi-De", email = "tobidegnon@proton.me" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["fastapi", "python", "cookiecutter", "project template", "tortoise-orm", "beanie", "SQLModel"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
]
dependencies = [
    "cookiecutter>=2.1.1,<3.0.0",
    "pytest-cookies>=0.6.1,<0.8.0",
    "pytest>=7.2,<9.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=5.3,<8.0",
    "furo>=2022.12.7,<2025.0.0",
    "myst-parser>=0.18.1,<3.1.0",
    "sphinx-click>=4.4,<7.0",
]

[project.urls]
Homepage = "https://cookiecutter-fastapi.readthedocs.io/en/latest/"
Documentation = "https://cookiecutter-fastapi.readthedocs.io/en/latest/"
Repository = "https://github.com/Tobi-De/cookiecutter-fastapi"

[tool.pytest]
norecursedirs = ["app*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
