[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Tobi-De <tobidegnon@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
factory-boy = "^3.2.1"
pre-commit = "^2.18.1"
mypy = "^0.950"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
