[project]
authors = [
    {% if '<' in cookiecutter.author -%}
    { name = "{{cookiecutter.author.split('<')[0].strip()}}", email = "{{cookiecutter.author.split('<')[1].split('>')[0].strip()}}" }
    {%- else -%}
    { name = "{{cookiecutter.author}}" }
    {%- endif %}
]dependencies = [
    "fastapi>=0.109.2",
    "fastapi-cli>=0.0.2",
    "uvicorn>=0.21.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    {% if cookiecutter.database == "Tortoise" -%}
    "fastapi-users>=10.4.1",
    "fastapi-users-tortoise>=0.2.0",
    "tortoise-orm[asyncpg]>=0.19.3",
    "aerich>=0.7.1",
    {% endif -%}
    {% if cookiecutter.database == "Beanie" -%}
    "fastapi-users[beanie]>=10.4.1",
    "motor>=3.0.0",
    {% endif -%}
    "saq[hiredis,web]>=0.9.3",
    "hupper>=1.11",
    {% if cookiecutter.mail_service == 'Other SMTP' -%}
    "aiosmtplib>=1.1.6",
    {% endif -%}
    "python-multipart>=0.0.9",
    {% if cookiecutter.use_sentry == 'y' -%}
    "sentry-sdk>=1.17.0",
    {% endif -%}
    "rich>=13.3.2",
    "typer>=0.7.0",
    "watchgod>=0.8.2",
    "Jinja2>=3.1.2",
    "httpx>=0.23.3",
    {% if cookiecutter.mail_service == 'Amazon SES' -%}
    "aioaws>=0.14",
    {% endif -%}
    "honcho>=1.1.0",
]name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
readme = "README.md"
license = { text = "{{cookiecutter.license}}" }
requires-python = ">=3.9"

[project.optional-dependencies]


{% if cookiecutter.database == "Tortoise" -%}
dev = [
    "pytest>=7.2.2",
    "factory-boy>=3.2.1",
    "pre-commit>=3.1.1",
    "mypy>=1.1.1",
    "ruff>=0.1.0",
    "ipython>=8.11.0",
    "aiosmtpd>=1.4.4.post2",
]
[tool.aerich]

{% endif -%}

tortoise_orm = "{{cookiecutter.project_slug}}.db.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[tool.isort]
profile = "black"

[tool.mypy]
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
select = [
    "E",  # https://github.com/charliermarsh/ruff#pycodestylet
    "F",  # https://github.com/charliermarsh/ruff#pyflakes
    "UP", # https://github.com/charliermarsh/ruff#pyupgrade
    "N",  # https://github.com/charliermarsh/ruff#pep8-naming
    "S",  # https://github.com/charliermarsh/ruff#flake8-bandit
    "C",  # https://github.com/charliermarsh/ruff#flake8-comprehensions
    "B",  # https://github.com/charliermarsh/ruff#flake8-bugbear
    "T",  # https://github.com/charliermarsh/ruff#flake8-print
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "{{cookiecutter.project_slug}}"
module-root = ""
